--- a/APP/templates/mylistings.html
+++ b/APP/templates/mylistings.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="zxx">
     <head>
@@ -11,29 +12,29 @@
         <link rel="stylesheet"  href="assets/css/ie-fix.css" />
         <![endif]-->
         <!-- Start BOOTSTRAP -->
-        <link rel="stylesheet" href="assets/libraries/tether/dist/css/tether.min.css" />
-        <link rel="stylesheet" href="assets/libraries/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="assets/css/bootstrap-select.min.css" />
-        <link rel="stylesheet" href="assets/libraries/bootstrap-colorpicker-master/dist/css/bootstrap-colorpicker.min.css" />
+        <link rel="stylesheet" href="{% static 'assets/libraries/tether/dist/css/tether.min.css' %}" />
+        <link rel="stylesheet" href="{% static 'assets/libraries/bootstrap/dist/css/bootstrap.min.css' %}" />
+        <link rel="stylesheet" href="{% static 'assets/css/bootstrap-select.min.css' %}" />
+        <link rel="stylesheet" href="{% static 'assets/libraries/bootstrap-colorpicker-master/dist/css/bootstrap-colorpicker.min.css' %}" />
         <!-- End Bootstrap -->
         <!-- Start Template files -->
-        <link rel="stylesheet" href="assets/css/world-dealer.css" />
-        <link rel="stylesheet" href="assets/css/world-dealer-media.css" />
+        <link rel="stylesheet" href="{% static 'assets/css/world-dealer.css' %}" />
+        <link rel="stylesheet" href="{% static 'assets/css/world-dealer-media.css' %}" />
         <!-- End  Template files -->
         <!-- Start blueimp  -->
-        <link rel="stylesheet" href="assets/css/blueimp-gallery.min.css" />
+        <link rel="stylesheet" href="{% static 'assets/css/blueimp-gallery.min.css' %}" />
         <!-- End blueimp  -->
         <!-- Start JS MAP  -->
-        <link rel="stylesheet" href="assets/css/map.css" />
+        <link rel="stylesheet" href="{% static 'assets/css/map.css' %}" />
         <!-- End JS MAP  -->
-        <!-- Start footable-jquery -->	
-        <link rel="stylesheet" href="assets/libraries/footable-jquery/css/footable.bootstrap.min.css" />
+        <!-- Start footable-jquery -->
+        <link rel="stylesheet" href="{% static 'assets/libraries/footable-jquery/css/footable.bootstrap.min.css' %}" />
         <!-- End footable-jquery -->
         <!-- Start custom styles  -->
-        <link rel="stylesheet" href="assets/css/custom.css" />
+        <link rel="stylesheet" href="{% static 'assets/css/custom.css' %}" />
         <!-- End custom styles  -->
-        <script src="assets/js/modernizr.custom.js"></script>
-        <link rel="stylesheet" href="assets/libraries/nouislider/nouislider.css" />
+        <script src="{% static 'assets/js/modernizr.custom.js' %}"></script>
+        <link rel="stylesheet" href="{% static 'assets/libraries/nouislider/nouislider.css' %}" />
     </head>
     <body>
         <header class="header container container-palette affix-menu">
@@ -41,7 +42,7 @@
                 <div class="<!--container-->">
                     <div class="top-bar-left">
                         <div class="top-bar-body">
-                            <a href="index.html" class="logo"><img src="assets/img/placeholders/60x60.png" alt="" /></a>
+                            <a href="index.html" class="logo"><img src="{% static 'assets/img/placeholders/60x60.png' %}" alt="" /></a>
                             <h1 class="website-title"><a href="index.html" data-hover="World Dealer">World Dealer</a></h1>
                         </div>
                         <div class="skew-block"></div>
@@ -327,17 +328,17 @@
                                     <a class="dropdown-item" href="#">
                                         <img src="assets/img/flags/hr.png" alt="" /> Hrvatska
                                     </a>
-                                </li>                                
+                                </li>
                                 <li>
                                     <a class="dropdown-item" href="#">
                                         <img src="assets/img/flags/ru.png" alt="" /> Russian
                                     </a>
-                                </li>                                
+                                </li>
                                 <li>
                                     <a class="dropdown-item" href="#">
                                         <img src="assets/img/flags/au.png" alt="" /> Australia
                                     </a>
-                                </li>                              
+                                </li>
                                 <li>
                                     <a class="dropdown-item" href="#">
                                         <img src="assets/img/flags/fi.png" alt="" /> Finland
@@ -384,7 +385,7 @@
                                     <tr>
                                         <td>29</td>
                                         <td>
-                                        <a href="#">Veliki lovrečan</a>                                                                                
+                                        <a href="#">Veliki lovrečan</a>
                                         </td>
                                         <!-- Dynamic generated -->
                                         <td>My listing</td>
@@ -403,10 +404,10 @@
                             </table>
                             <div class="box-body">
                                 * Listing activation price: 5 USD<br />
-                                * Listing featured price: 10 USD                                 
+                                * Listing featured price: 10 USD
                             </div>
                     </div>
-                </div> 
+                </div>
                 <div class="widget box box-fill section">
                     <div class="widget-header vert-line-r-l vert-line-primary">
                         <h2>My Package</h2>
@@ -429,21 +430,21 @@
                               <tr>
                                   <td>1</td>
                                   <td>
-                                      Free <i class="icon-eye-open"></i> 
+                                      Free <i class="icon-eye-open"></i>
                                       <span class="label label-important">Not activated</span>
                                   </td>
                                   <td>
-                                      0.00 USD                                        
+                                      0.00 USD
                                   </td>
                                   <td></td>
                                   <td>
                                       0
                                   </td>
                                   <td>
-                                      1                                        
+                                      1
                                   </td>
                                   <td>
-                                      0                                        
+                                      0
                                   </td>
                                   <td></td>
                               </tr>
@@ -453,17 +454,17 @@
                                       Premium <i class="icon-eye-open"></i><span class="label label-success">Activated</span>
                                   </td>
                                   <td>
-                                      20.00 USD                                        
+                                      20.00 USD
                                   </td>
                                   <td><i class="icon-ok"></i></td>
                                   <td>
-                                      30, 2017-12-14 13:18:25                                        
+                                      30, 2017-12-14 13:18:25
                                   </td>
                                   <td>
-                                      40                                        
+                                      40
                                   </td>
                                   <td>
-                                      1                                        
+                                      1
                                   </td>
                                   <td>
                                   <div class="btn-group">
@@ -480,7 +481,7 @@
                           </tbody>
                       </table>
                     </div>
-                </div> 
+                </div>
                 <div class="widget box box-fill section">
                     <div class="widget-header vert-line-r-l vert-line-primary">
                         <h2>Bank Payment Details</h2>
@@ -490,7 +491,7 @@
                         SWIFT: PBZGHR2X<br />
                         Notice: Please enter 'property id #' in Bank transfer notice
                     </div>
-                </div> 
+                </div>
         </main>
         <footer class="footer container container-palette">
             <div class="footer-content box-fill">
@@ -577,10 +578,10 @@
                             </div>
                             <div class="form-group">
                                 <input type="text" class="form-control" name="password" placeholder="Password" />
-                            </div>                            
+                            </div>
                             <div class="form-group">
                                 <div class="g-recaptcha" data-sitekey="6LcsLCMTAAAAAGBLfo_gUkpTEa7DuEL35u4tCJfS"></div>
-                            </div>                            
+                            </div>
                             <div class="form-group">
                                 <button type="button" class="btn btn-primary btn_color">Register</button>
                             </div>
@@ -601,41 +602,41 @@
         </div><!-- /.modal -->
         <a class="btn btn-scoll-up" id="btn-scroll-up"></a>
         <!-- Start Jquery -->
-        <script src="assets/js/jquery-2.2.1.min.js"></script>
-        <script src="assets/libraries/jquery.mobile/jquery.mobile.custom.min.js"></script>
+        <script src="{% static 'assets/js/jquery-2.2.1.min.js' %}"></script>
+        <script src="{% static 'assets/libraries/jquery.mobile/jquery.mobile.custom.min.js' %}"></script>
         <!-- End Jquery -->
         <!-- Start BOOTSTRAP -->
-        <script src="assets/libraries/tether/dist/js/tether.min.js"></script>
-        <script src="assets/libraries/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="assets/js/bootstrap-select.min.js"></script>
-        <script src="assets/libraries/bootstrap-colorpicker-master/dist/js/bootstrap-colorpicker.min.js"></script>
+        <script src="{% static 'assets/libraries/tether/dist/js/tether.min.js' %}"></script>
+        <script src="{% static 'assets/libraries/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'assets/js/bootstrap-select.min.js' %}"></script>
+        <script src="{% static 'assets/libraries/bootstrap-colorpicker-master/dist/js/bootstrap-colorpicker.min.js' %}"></script>
         <!-- End Bootstrap -->
         <!-- Start Template files -->
-        <script src="assets/js/world-dealer.js"></script>
+        <script src="{% static 'assets/js/world-dealer.js' %}"></script>
         <!-- End  Template files -->
         <!-- Start blueimp  -->
-        <script src="assets/js/blueimp-gallery.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/blueimp-gallery.min.js' %}" type="text/javascript"></script>
         <!-- End blueimp  -->
         <!-- Start JS MAP  -->
         <script src="http://maps.googleapis.com/maps/api/js?libraries=weather,geometry,visualization,places,drawing&amp;&key=AIzaSyD95zDTtfBmAopNLYu3nBKVTLEBanURbM8" type="text/javascript"></script>
-        <script type="text/javascript" src="assets/js/map_infobox.js"></script>
-        <script type="text/javascript" src="assets/js/markerclusterer.js"></script>
-        <script src="assets/js/map.js" type="text/javascript"></script>
+        <script type="text/javascript" src="{% static 'assets/js/map_infobox.js' %}"></script>
+        <script type="text/javascript" src="{% static 'assets/js/markerclusterer.js' %}"></script>
+        <script src="assets/js/map.js" type="text/javascript' %}"></script>
         <!-- End JS MAP  -->
-        <!-- Start footable-jquery -->	
-        <script src="assets/libraries/footable-jquery/js/footable.js"></script>
-        <script src="assets/js/footable_custom.js"></script>
+        <!-- Start footable-jquery -->
+        <script src="{% static 'assets/libraries/footable-jquery/js/footable.js' %}"></script>
+        <script src="{% static 'assets/js/footable_custom.js' %}"></script>
         <!-- End footable-jquery -->
         <!-- Start custom styles  -->
-        <script src="assets/js/custom.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/custom.js' %}" type="text/javascript"></script>
         <!-- End custom styles  -->
-        <script src="assets/js/moment-with-locales.min.js" type="text/javascript"></script>
-        <script src="assets/js/moment-timezone-with-data.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/moment-with-locales.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/moment-timezone-with-data.js' %}" type="text/javascript"></script>
         <!-- Start kevalbhatt-worldmapgenerator http://kevalbhatt.github.io/WorldMapGenerator/ -->
-        <script src="assets/js/worldmapgenerator_custom.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/worldmapgenerator_custom.js' %}" type="text/javascript"></script>
         <!-- End kevalbhatt-worldmapgenerator  -->
-        <script src="assets/libraries/nouislider/nouislider.min.js"></script>
+        <script src="{% static 'assets/libraries/nouislider/nouislider.min.js' %}"></script>
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-        <script src="assets/js/facebook.js"></script>
+        <script src="{% static 'assets/js/facebook.js' %}"></script>
     </body>
 </html>
