--- a/APP/templates/index.html
+++ b/APP/templates/index.html
@@ -78,10 +78,10 @@
         <a class="btn-custom vert-line-l-r vert-line-orange link-effect-1" data-hover="Submit Listing" href="submit-listing">
          Submit Listing
         </a>
-        <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Register" href="login.html">
+        <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Register" data-target="#registr-form" data-toggle="modal" href="#">
          Register
         </a>
-        <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Login" href="login2.html">
+        <a class="btn-custom vert-line-l-r vert-line-primary link-effect-1" data-hover="Login" data-target="#login-form" data-toggle="modal" href="#">
          Login
         </a>
         <button class="navbar-toggle" id="toggle-mainmenu" type="button">
@@ -129,11 +129,11 @@
      </div>
      <div class="search-form-mini-phone hidden-sm">
       <div>
+       <input id="search" placeholder="Search" type="text"/>
        <a class="search" href="#">
-        <i class="fa fa-search">
+        <i class="fa fa-search" onclick="search()">
         </i>
        </a>
-       <input placeholder="Search" type="text"/>
        <a class="close" href="#">
         <i class="fa fa-remove">
         </i>
@@ -989,7 +989,7 @@ function search () {
              {{car.speed}} km
             </span>
             <div class="property-ratings">
-             <i class="icon-star-ratings-1">
+             <i class="icon-star-ratings-{{car.rating}}">
              </i>
             </div>
            </div>
@@ -1348,6 +1348,12 @@ function search () {
         </div>
        <div class="form-group">
         <input class="form-control" name="email" placeholder="Mail" type="text"/>
+       </div>
+       <div class="form-group">
+        <select name="user_type" class="form-control">
+          <option>Buyer</option>
+          <option>Dealer</option>
+        </select>
        </div>
        <div class="form-group">
         <input class="form-control" name="password1" placeholder="Password" type="password"/>
