--- a/APP/templates/index.html
+++ b/APP/templates/index.html
@@ -810,72 +810,34 @@ function search () {
         </h2>
        </div>
        <div class="widget-content">
+         {% for i in dealers %}
         <div class="agent-box media">
          <div class="media-left">
-          <a class="agent-box-image image-hoveffect-zoom" href="page_profile.html">
+          <a class="agent-box-image image-hoveffect-zoom" href="{{i.get_absolute_url}}">
+            {% if i.image %}
+            <img alt="" src="{{i.image.url}}"/>
+            {% else %}
            <img alt="" src="{% static 'assets/img/placeholders/125x125.png' %}"/>
+           {% endif %}
           </a>
          </div>
          <div class="media-right">
           <h3 class="title">
-           <a class="primary-hover" href="page_profile.html">
-            Ketty Springs (6)
+           <a class="primary-hover" href="{{i.get_absolute_url}}">
+            {{i.name}}
            </a>
           </h3>
           <span class="number">
-           +385 (0)91 123 321
+          {{i.phone}}
           </span>
           <span class="mail">
-           <a href="mailto:kety@website.com">
-            kety@website.com
+           <a href="mailto:{{i.website}}">
+            {{i.website}}
            </a>
           </span>
          </div>
         </div>
-        <div class="agent-box media">
-         <div class="media-left">
-          <a class="agent-box-image image-hoveffect-zoom" href="page_profile.html">
-           <img alt="" src="{% static 'assets/img/placeholders/125x125.png' %}"/>
-          </a>
-         </div>
-         <div class="media-right">
-          <h3 class="title">
-           <a class="primary-hover" href="page_profile.html">
-            Pero Peric (4)
-           </a>
-          </h3>
-          <span class="number">
-           +385 (0)91 123 321
-          </span>
-          <span class="mail">
-           <a href="mailto:kety@website.com">
-            pero@website.com
-           </a>
-          </span>
-         </div>
-        </div>
-        <div class="agent-box media">
-         <div class="media-left">
-          <a class="agent-box-image image-hoveffect-zoom" href="page_profile.html">
-           <img alt="" src="{% static 'assets/img/placeholders/125x125.png' %}"/>
-          </a>
-         </div>
-         <div class="media-right">
-          <h3 class="title">
-           <a class="primary-hover" href="page_profile.html">
-            Lazo Biskup (3)
-           </a>
-          </h3>
-          <span class="number">
-           +385 (0)91 123 321
-          </span>
-          <span class="mail">
-           <a href="mailto:kety@website.com">
-            lazo@website.com
-           </a>
-          </span>
-         </div>
-        </div>
+        {% endfor %}
        </div>
       </div>
       <!-- /. agents-list -->
@@ -1063,6 +1025,7 @@ function search () {
         </h2>
        </div>
        <div class="widget-content">
+         {% for i in dealers %}
         <div class="agent-box media">
          <div class="media-left">
           <a class="agent-box-image image-hoveffect-zoom" href="page_profile.html">
@@ -1085,50 +1048,7 @@ function search () {
           </span>
          </div>
         </div>
-        <div class="agent-box media">
-         <div class="media-left">
-          <a class="agent-box-image image-hoveffect-zoom" href="page_profile.html">
-           <img alt="" src="{% static 'assets/img/placeholders/125x125.png' %}"/>
-          </a>
-         </div>
-         <div class="media-right">
-          <h3 class="title">
-           <a class="primary-hover" href="page_profile.html">
-            Pero Peric (4)
-           </a>
-          </h3>
-          <span class="number">
-           +385 (0)91 123 321
-          </span>
-          <span class="mail">
-           <a href="mailto:kety@website.com">
-            pero@website.com
-           </a>
-          </span>
-         </div>
-        </div>
-        <div class="agent-box media">
-         <div class="media-left">
-          <a class="agent-box-image image-hoveffect-zoom" href="page_profile.html">
-           <img alt="" src="{% static 'assets/img/placeholders/125x125.png' %}"/>
-          </a>
-         </div>
-         <div class="media-right">
-          <h3 class="title">
-           <a class="primary-hover" href="page_profile.html">
-            Lazo Biskup (3)
-           </a>
-          </h3>
-          <span class="number">
-           +385 (0)91 123 321
-          </span>
-          <span class="mail">
-           <a href="mailto:kety@website.com">
-            lazo@website.com
-           </a>
-          </span>
-         </div>
-        </div>
+        {% endfor %}
        </div>
       </div>
       <!-- /. agents-list -->
@@ -1139,30 +1059,20 @@ function search () {
   <section class="section container section-spaces">
    <div class="box-fill box">
     <div class="row">
+      {% for i in articles %}
      <div class="col-sm-6">
       <div class="custom-box">
        <div class="custom-box-title vert-line-r-l vert-line-primary">
         <h2>
-         Article heading
+         {{i.title}}
         </h2>
        </div>
        <div class="custom-box-content text-justify">
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+        {{i.summmary}}
        </div>
       </div>
      </div>
-     <div class="col-sm-6">
-      <div class="custom-box">
-       <div class="custom-box-title vert-line-r-l vert-line-primary">
-        <h2>
-         Article heading
-        </h2>
-       </div>
-       <div class="custom-box-content text-justify">
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-       </div>
-      </div>
-     </div>
+     {% endfor %}
     </div>
    </div>
   </section>
@@ -1311,7 +1221,7 @@ function search () {
          Login
         </button>
        </div>
-       {{message}}
+       {{message_login}}
       </form>
      </div>
     </div>
@@ -1365,6 +1275,7 @@ function search () {
         <button class="btn btn-primary btn_color" type="submit">
          Register
         </button>
+        {{message_register}}
        </div>
       </form>
      </div>
