added the feature

--- a/APP/templates/features.html
+++ b/APP/templates/features.html
@@ -644,7 +644,7 @@
               </span>
              </div>
             </div>
-            <a class="property-image-hover" href="listing.html">
+            <a class="property-image-hover" href="{{item.get_absolute_url}}">
              <span class="property-im-m property-im-m-lt">
              </span>
              <span class="property-im-m property-im-m-lb">
@@ -697,7 +697,7 @@
               </a>
             </div>
             <h3 class="property-title">
-             <a href="listing.html">
+             <a href="{{item.get_absolute_url}}">
               {{item.title}}
              </a>
             </h3>
