--- a/APP/templates/index.html
+++ b/APP/templates/index.html
@@ -1063,9 +1063,11 @@ function search () {
      <div class="col-sm-6">
       <div class="custom-box">
        <div class="custom-box-title vert-line-r-l vert-line-primary">
+         <a href="{{i.get_absolute_url}}">
         <h2>
          {{i.title}}
         </h2>
+      </a>
        </div>
        <div class="custom-box-content text-justify">
         {{i.summmary}}
