--- a/APP/templates/page_featured.html
+++ b/APP/templates/page_featured.html
@@ -607,7 +607,7 @@
     <div class="bg-mask-map">
      <div class="container">
       <h1>
-       Featured
+       Listing
       </h1>
      </div>
     </div>
