--- a/APP/templates/cars.html
+++ b/APP/templates/cars.html
@@ -607,7 +607,7 @@
     <div class="bg-mask-map">
      <div class="container">
       <h1>
-       Featured
+       {{category}}s
       </h1>
      </div>
     </div>
